--- a/templates/document_head.hbs
+++ b/templates/document_head.hbs
@@ -2,3 +2,7 @@
 <!-- Make the translated search clear button label available for use in JS -->
 <!-- See buildClearSearchButton() in script.js -->
 <script type="text/javascript">window.searchClearButtonLabelLocalized = "{{t 'search_clear'}}";</script>
+<!-- Font Awesome 6 Support SANDBOX -->
+<script src="https://kit.fontawesome.com/797de03d01.js" crossorigin="anonymous"></script>
+<!-- Font Awesome 6 Support LIVE 
+<script src="https://kit.fontawesome.com/d1d75e8f54.js" crossorigin="anonymous"></script> -->
